--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,9 @@ jobs:
           - $HOME/.cabal
       install:
         - sudo apt -y update
-        - sudo apt -y install cabal-install
+        - curl -L https://nixos.org/nix/install | sh
+        - . /home/ubuntu/.nix-profile/etc/profile.d/nix.sh
+        - nix-env -i cabal-install # don't use apt -y install cabal-install, ubuntu cabal uses an outdated version that has a bug https://github.com/haskell/cabal/issues/6222
         - sudo apt -y install zlib1g-dev
         - sudo apt -y install libpq-dev
         - sudo apt -y install pkg-config
