--- a/.travis.yml
+++ b/.travis.yml
@@ -90,7 +90,7 @@ jobs:
       install:
         - sudo apt -y update
         - curl -L https://nixos.org/nix/install | sh
-        - . /home/ubuntu/.nix-profile/etc/profile.d/nix.sh
+        - . /home/travis/.nix-profile/etc/profile.d/nix.sh
         - nix-env -i cabal-install # don't use apt -y install cabal-install, ubuntu cabal uses an outdated version that has a bug https://github.com/haskell/cabal/issues/6222
         - sudo apt -y install zlib1g-dev
         - sudo apt -y install libpq-dev
