--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ jobs:
         directories:
           - $HOME/.cabal
       install:
-        - sudo apt -y update
+        #- sudo apt -y update
         - sudo apt -y install ghc
         - curl -L https://nixos.org/nix/install | sh
         - . /home/travis/.nix-profile/etc/profile.d/nix.sh
